Beacon animation hinzugefügt, Sperren eines Bildschirmes ist möglich, Slider animieren nach loslassen zu seite. Wichtige Eintsellung in Setting Datei ausgelagert.

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,6 @@
 </head>
 <body class="main">
 
-<a href="#"><span id="icon-home" class="glyphicon glyphicon-align-left icon-home icon-rotate icon-right"></span></a>
 
 <section class="first fullscreen screen-left" id="first">
     <!-- template -->
@@ -53,20 +52,9 @@
 </section>
 
 
-<!-- navigation -->
-<nav class="navigation">
-    <div class="position one"></div>
-    <div class="position two"></div>
-    <div class="position three"></div>
-    <div class="position four"></div>
-</nav>
-<!-- end navigation -->
-
-<div id="draggable-h" class="draggable draggable-horizontal"></div>
-<div id="draggable-v" class="draggable draggable-vertical"></div>
-
 <script src="../js/jquery.js"></script>
 <script src="../js/draggabilly.min.js"></script>
+<script src="../js/slide-setting.js"></script>
 <script src="../js/digitalworks.js"></script>
 </body>
 </html>
