--- a/css/digitalWorks.css
+++ b/css/digitalWorks.css
@@ -317,6 +317,78 @@ section {
     content: close-quote;
 }
 
+/* beacon */
+/*
+ * Quelle: http://codepen.io/agmason/pen/ytqoD
+ */
+
+.beacon-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    -webkit-align-items: center;
+    z-index: 300;
+    cursor: pointer;
+}
+
+.beacon{
+    position: relative;
+    margin: 0 auto;
+    height: 100px;
+    width: 100px;
+    background:  rgba(24, 166, 140, .8);
+    border-radius: 200px;
+}
+
+.beacon-tooltip {
+    font-size: larger;
+    color: rgba(255, 255, 255, .8);
+    font-weight: bold;
+}
+
+@-webkit-keyframes ping{
+    0%{
+        opacity: 1;
+        border-color: rgba(24, 166, 140, .5);
+    }
+
+    100%{
+        transform: scale(2,2);
+        opacity: 0;
+        border-color:  rgba(24, 166, 140, .2);
+    }
+}
+
+.ping {
+    width: 100px;
+    height: 100px;
+    border-radius: 200px;
+    position: absolute;
+    box-sizing: border-box;
+    border-style: solid;
+    border-size: 1px;
+    border-color:  rgba(24, 166, 140, .5);
+}
+.ping1 {
+    -webkit-animation:   ping 2s infinite 0s;
+    -moz-animation:      ping 2s infinite 0s;
+    -o-animation:        ping 2s infinite 0s;
+    animation:           ping 2s infinite 0s;
+}
+.ping2 {
+    -webkit-animation:   ping 2s infinite 0.25s;
+    -moz-animation:      ping 2s infinite 0.25s;
+    -o-animation:        ping 2s infinite 0.25s;
+    animation:           ping 2s infinite 0.25s;
+}
+.ping3 {
+    -webkit-animation:   ping 2s infinite 0.5s;
+    -moz-animation:      ping 2s infinite 0.5s;
+    -o-animation:        ping 2s infinite 0.5s;
+    animation:           ping 2s infinite 0.5s;
+}
+
 /* täääst */
 
 /*
