added a custom start position

--- a/templates/start.html
+++ b/templates/start.html
@@ -14,8 +14,7 @@
     <title>Digital Works</title>
 </head>
 <body class="main">
-
-
+<div class="location"></div>
 <section class="first fullscreen screen-left" id="first">
     <!-- template -->
     <div class="container section-avatar">
@@ -44,6 +43,13 @@
 <section class="second fullscreen screen-right" id="second">
     <!-- template -->
 </section>
+<section class="third fullscreen screen-left" id="third">
+    <!-- template -->
+</section>
+<section class="fourth fullscreen screen-right" id="fourth">
+    <!-- template -->
+</section>
+
 
 <script src="../js/jquery.js"></script>
 <script src="../js/draggabilly.min.js"></script>
