--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,6 @@
 </head>
 <body class="main">
 
-
 <section class="first fullscreen screen-left" id="first">
     <!-- template -->
     <div class="container section-avatar">
@@ -53,6 +52,7 @@
 
 
 <script src="../js/jquery.js"></script>
+<script src="../js/jquery-ui.min.js"></script>
 <script src="../js/draggabilly.min.js"></script>
 <script src="../js/slide-setting.js"></script>
 <script src="../js/digitalworks.js"></script>
