--- a/templates/start.html
+++ b/templates/start.html
@@ -14,7 +14,7 @@
     <title>Digital Works</title>
 </head>
 <body class="main">
-<div class="location"></div>
+<div class="location hide"></div>
 <section class="first fullscreen screen-left" id="first">
     <!-- template -->
     <div class="container section-avatar">
@@ -52,6 +52,7 @@
 
 
 <script src="../js/jquery.js"></script>
+<script src="../js/jquery-ui.min.js"></script>
 <script src="../js/draggabilly.min.js"></script>
 <script src="../js/start-setting.js"></script>
 <script src="../js/digitalworks.js"></script>
