file name and import fixed

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head lang="de">
     <meta charset="UTF-8">
     <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/digitalworks.css" rel="stylesheet">
+    <link href="../css/digital-works.css" rel="stylesheet">
 
     <!-- fonts -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -55,6 +55,6 @@
 <script src="../js/jquery-ui.min.js"></script>
 <script src="../js/draggabilly.min.js"></script>
 <script src="../js/slide-setting.js"></script>
-<script src="../js/digitalworks.js"></script>
+<script src="../js/digital-works.js"></script>
 </body>
 </html>
