--- a/templates/start.html
+++ b/templates/start.html
@@ -17,24 +17,61 @@
 <div class="location hide"></div>
 <section class="first fullscreen screen-left" id="first">
     <!-- template -->
-    <div class="container section-avatar">
+    <div class="container margin-artist-top">
         <div class="row">
-            <div class="col-md-10 col-md-offset-1 text-center">
-                <h3 class="avatar-header">Prozesse</h3>
-                <h2 class="avatar-header">Franz Mattuschka</h2>
+            <div class="col-xs-offset-1 col-xs-4 artist-link">
+                <a href="info/franz/#">
+                    <img src="../img/Startseite_Franz.jpg" class="img-responsive cheat-sheet-left opacity-start">
+
+                    <div class="artist text-center cheat-sheet-left">
+                        <h2 class="header artist-name">Franz Mattuschka</h2>
+
+                        <h3 class="header artist-title">Prozesse</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xs-offset-2 col-xs-4 artist-link">
+                <a href="info/janosch/#">
+                    <img src="../img/Startseite_Janosch.jpg" class="img-responsive cheat-sheet-right opacity-start">
+
+                    <div class="artist text-center cheat-sheet-right">
+                        <h2 class="header artist-name">Janosch Kunze</h2>
+
+                        <h3 class="header artist-title">Industielle Welten</h3>
+                    </div>
+                </a>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-2 col-md-offset-5">
-                <img src="http://placehold.it/150x150" class="img-circle img-responsive center-block avatar">
+            <div class="col-md-10 col-md-offset-1">
+                <h1 class="text-center surface-margin">SURFACE</h1>
             </div>
         </div>
         <div class="row">
-            <div class="text-center col-md-10 col-md-offset-1">
-                <p class="quote">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
-                    massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                </p>
+            <div class="col-xs-offset-1 col-xs-4 artist-link">
+                <a href="info/thomas/#">
+                    <img src="../img/Startseite_Thomas.jpg"
+                         class="img-responsive cheat-sheet-left opacity-start">
+
+                    <div class="artist text-center cheat-sheet-left">
+                        <h2 class="header artist-name">Thomas Hiebert</h2>
+
+                        <h3 class="header artist-title">Firmenportraits</h3>
+                    </div>
+
+                </a>
+
+            </div>
+            <div class="col-xs-offset-2 col-xs-4 artist-link">
+                <a href="info/regina/#">
+                    <img src="../img/Startseite_Regina.jpg" class="img-responsive cheat-sheet-right opacity-start">
+
+                    <div class="artist text-center cheat-sheet-right ">
+                        <h2 class="header artist-name">Regina Loy</h2>
+
+                        <h3 class="header artist-title">Mensch und Maschine</h3>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
@@ -42,6 +79,65 @@
 </section>
 <section class="second fullscreen screen-right" id="second">
     <!-- template -->
+    <div class="container margin-artist-top">
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-4 artist-link">
+                <a href="gallery/franz/#">
+                    <img src="../img/Startseite_Franz.jpg" class="img-responsive cheat-sheet-left">
+
+                    <div class="artist text-center cheat-sheet-left opacity-start">
+                        <h2 class="header artist-name">Franz Mattuschka</h2>
+
+                        <h3 class="header artist-title">Prozesse</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xs-offset-2 col-xs-4 artist-link">
+                <a href="gallery/janosch/#">
+                    <img src="../img/Startseite_Janosch.jpg" class="img-responsive cheat-sheet-right ">
+
+                    <div class="artist text-center cheat-sheet-right opacity-start">
+                        <h2 class="header artist-name">Janosch Kunze</h2>
+
+                        <h3 class="header artist-title">Industielle Welten</h3>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                <h1 class="text-center surface-margin">SOUSFACE</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-4 artist-link">
+                <a href="gallery/thomas/#">
+                    <img src="../img/Startseite_Thomas.jpg"
+                         class="img-responsive cheat-sheet-left ">
+
+                    <div class="artist text-center cheat-sheet-left opacity-start">
+                        <h2 class="header artist-name">Thomas Hiebert</h2>
+
+                        <h3 class="header artist-title">Firmenportraits</h3>
+                    </div>
+
+                </a>
+
+            </div>
+            <div class="col-xs-offset-2 col-xs-4 artist-link">
+                <a href="gallery/regina/#">
+                    <img src="../img/Startseite_Regina.jpg" class="img-responsive cheat-sheet-right ">
+
+                    <div class="artist text-center cheat-sheet-right opacity-start">
+                        <h2 class="header artist-name">Regina Loy</h2>
+
+                        <h3 class="header artist-title">Mensch und Maschine</h3>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+    <!-- end template -->
 </section>
 <section class="third fullscreen screen-left" id="third">
     <!-- template -->
