--- a/css/works.css
+++ b/css/works.css
@@ -17,6 +17,24 @@ body {
     overflow: hidden;
 }
 
+.mask {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+.screen .inner {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+
 section {
     font-size: 100%;
     vertical-align: baseline;
@@ -117,15 +135,29 @@ section .inner {
     font-size: 1.25em;
 }
 
+/* discover */
+.inner .discover {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -moz-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+
 
 .footnote {
     z-index: 100;
     font-size: 1.2em;
-    width: 1024px;
-    height: 100%;
-    position: relative;
+    width: 100%;
+    position: absolute;
     bottom: .5em;
-    margin: 0 auto;
 
     display: -webkit-box;
     display: -moz-box;
@@ -146,10 +178,14 @@ section .inner {
     -webkit-justify-content: center;
     justify-content: center;
 }
+.footnote .inner {
+    width: 1024px;
+    display: flex;
+    justify-content: space-around;
+}
 
-.footnote > span {
-    display: inline-flex;
-    width: 30%;
+
+.footnote .inner > span {
 }
 
 .footnote .imprint {
@@ -165,6 +201,83 @@ section .inner {
     -ms-flex-pack: end;
     -webkit-justify-content: flex-end;
     justify-content: flex-end;
+}
+
+
+/* beacon */
+/*
+ * Quelle: http://codepen.io/agmason/pen/ytqoD
+ */
+
+.beacon-container {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    -webkit-align-items: center;
+    z-index: 300;
+    cursor: pointer;
+}
+
+.beacon {
+    position: relative;
+    margin: 0 auto;
+    height: 100px;
+    width: 100px;
+    background: rgba(24, 166, 140, .8);
+    border-radius: 200px;
+}
+
+.beacon-tooltip {
+    font-size: larger;
+    color: rgba(255, 255, 255, .8);
+    font-weight: bold;
+    bottom: 3.5em;
+    position: relative;
+}
+
+@-webkit-keyframes ping {
+    0% {
+        opacity: 1;
+        border-color: rgba(24, 166, 140, .5);
+    }
+
+    100% {
+        transform: scale(2, 2);
+        opacity: 0;
+        border-color: rgba(24, 166, 140, .2);
+    }
+}
+
+.ping1 {
+    -webkit-animation: ping 2s infinite 0s;
+    -moz-animation: ping 2s infinite 0s;
+    -o-animation: ping 2s infinite 0s;
+    animation: ping 2s infinite 0s;
+}
+
+.ping {
+    width: 100px;
+    height: 100px;
+    border-radius: 200px;
+    position: absolute;
+    box-sizing: border-box;
+    border: 1px solid rgba(24, 166, 140, .5);
+}
+
+.ping2 {
+    -webkit-animation: ping 2s infinite 0.25s;
+    -moz-animation: ping 2s infinite 0.25s;
+    -o-animation: ping 2s infinite 0.25s;
+    animation: ping 2s infinite 0.25s;
+}
+
+.ping3 {
+    -webkit-animation: ping 2s infinite 0.5s;
+    -moz-animation: ping 2s infinite 0.5s;
+    -o-animation: ping 2s infinite 0.5s;
+    animation: ping 2s infinite 0.5s;
 }
 
 
