--- a/css/theme/surface.css
+++ b/css/theme/surface.css
@@ -493,27 +493,31 @@
 
 /* quotes */
 
-.inner blockquote {
-    border-left: 3px solid #ccc;
-    margin: 1.5em 15px;
-    padding: 0.5em 10px;
-    quotes: "\201C""\201D""\2018""\2019";
+blockquote {
+    border-left: 0 solid #ccc!important;
+    margin: 1.5em 15px!important;
+    padding: 0.5em 10px!important;
+   /* quotes: "\201C""\201D""\2018""\2019"; */
 }
-.inner blockquote:before {
+blockquote:before {
     content: open-quote;
     font-size: 4em;
     line-height: 0.1em;
-    margin-right: 0.25em;
-    vertical-align: -0.4em;
+    margin-right: 0.1em;
+    vertical-align: -0.3em;
 }
-.inner blockquote p {
+
+blockquote p {
     display: inline;
 }
 
-.inner blockquote footer {
+blockquote footer {
     text-align: right;
     color: #999;
     font-size: 85%;
+}
+.beacon-tooltip blockquote {
+    font-weight: 400;
 }
 
 /* gallery */
